style (malevitch): homepage-picture is now correctly aligned

--- a/requirements/malevitch/css/homepage-game.css
+++ b/requirements/malevitch/css/homepage-game.css
@@ -1,7 +1,6 @@
 .homepage-game {
 	top: 20vh;
 	padding-left: 5vh;
-	padding-right: 5vh;
 	padding-bottom: 5vh;
 	height: 80vh;
 }
@@ -214,7 +213,7 @@
 	top: 20vh;
 	right: 5vh;
 	height: 80vh;
-	padding-left: 2.5vh;
+	padding-left: 7.5vh;
 	padding-bottom: 5vh;
 }
 
